Adding new functionalities: search suggestions, hover gallery

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
                             <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
                         </svg>
                     </button>
+                    <ul class="search__results">
+                        <li class="search__results-item">
+                            <a href="#" class="search__results-link">HOTEL LAS PALMAS</a>
+                        </li>
+                        <li class="search__results-item">
+                            <a href="#" class="search__results-link">HOTEL Aigo</a>
+                        </li>
+                        <li class="search__results-item">
+                            <a href="#" class="search__results-link">HOTEL Tulipas</a>
+                        </li>
+                        <li class="search__results-item">
+                            <a href="#" class="search__results-link">HOTEL brotos</a>
+                        </li>
+                    </ul>
                 </form>
                 <!-- HEADER USER NAVIGATION -->
                 <nav class="user-nav">
@@ -127,7 +141,7 @@
                                     <a href="#" class="user-nav__menu-box__link">Account Settings</a>
                                 </li>
                                 <li class="user-nav__menu-box__item">
-                                    <a href="#" class="user-nav__menu-box__link">Sing Out</a>
+                                    <a href="#" class="user-nav__menu-box__link">Sign Out</a>
                                 </li>
                             </ul>
                         </div>
@@ -180,12 +194,15 @@
                     <div class="gallery">
                         <figure class="gallery__item">
                             <img src="img/hotel-1.jpg" alt="Photo of Hotel 01" class="gallery__photo">
+                            <figcaption class="gallery__caption">Suspendisse</figcaption>
                         </figure>
                         <figure class="gallery__item">
                             <img src="img/hotel-2.jpg" alt="Photo of Hotel 02" class="gallery__photo">
+                            <figcaption class="gallery__caption">posuere</figcaption>
                         </figure>
                         <figure class="gallery__item">
                             <img src="img/hotel-3.jpg" alt="Photo of Hotel 03" class="gallery__photo">
+                            <figcaption class="gallery__caption">Praesent</figcaption>
                         </figure>
                     </div>
 
